--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="./newlogo.png">
-    <title>Document</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./icon.png">
+    <title>home.personalcapital.com</title>
 </head>
 <body>
     <div id="container">
@@ -16,7 +16,9 @@
             <h6>&reg;</h6>
         </div>
         <div id="head">
-            <h4>Empower Personal Dashboard<h6>&trade;</h6></h4>
+            <div id="trade">
+                <h4>Empower Personal Dashboard<h6>&trade;</h6></h4>
+            </div>
             <p>Personal Capital account holders sign in here</p>
         </div>
         <div id="input">
